# Denstiy2SSE

./: .gitignore  README.md  algorithm_freeze_optimization_extension.md  density_2_sse_implementation_pack_v_1.md  freeze_optimization_validation_report.md  model_expansion_benchmarking_spec_v_1.md  prompt.txt  prompt_2.txt  prompt_3.md  pyproject.toml
configs/: export.yaml  generate_data.yaml  infer.yaml  prepare_data.yaml  run.yaml  train.yaml  train_baseline.yaml  train_detr3d.yaml  train_detr3d_multiscale.yaml  train_render.yaml  train_resume_full.yaml  train_resume_weights.yaml  train_slot_attention3d.yaml  train_unet_sethead.yaml
density2sse/: __init__.py  __main__.py  cli.py  config.py
density2sse/data/: __init__.py  dataset.py  helix_template.npz  sample_schema.py  synthetic_generator.py
density2sse/export/: __init__.py  export_pdb.py
density2sse/geometry/: __init__.py  frame.py  helix.py  helix_builder.py  peptide_build.py
density2sse/infer/: predictor.py
density2sse/io/: __init__.py  mrc_io.py  pdb_io.py
density2sse/model/: __init__.py  baseline_cnn.py  detr3d.py  detr3d_multiscale.py  matching.py  registry.py  (+2 more)
docs/: model_architecture.md
examples/: Biopython_helix.py  example_mask.mrc
notebooks/: benchmark.ipynb
tests/: test_cli.py  test_config.py  test_helix.py  test_helix_geometry.py  test_integration.py  test_matching.py  test_metrics_plot.py  test_mrc_io.py  test_pdb_io.py  test_prepare_data.py  test_registry.py  test_renderer.py  test_resume_training.py  test_runtime_device.py
tools/: benchmark_metrics_backend.py  compare_runs.py
(+14 files in other folders)
